Implementando declaração de variaveis ao javascript, tipos usados: number e string

--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -21,9 +21,28 @@
     <p>Já me livrei da maldição</p>
 
     <script>
+        /*
+            Aprendendo a usar comando simples, 
+            estes comandos tem como objetivo
+            apresentar mensagens na pagina do navegador!
+        */
         window.alert('Minha primeira mensagem!')
-        window.confirm('está gostando de javascript?')
+        window.confirm('está gostando de javascript?') //janela com botão comentar!
         window.prompt('Qual é seu nome?')
+
+        //declarando variaveis em javascript!
+        //o nome de cada variavel é chamado de identificador
+
+        //tipo number:
+        var n1 = 5
+        var n2 = 8.5
+        var n3 = 15
+
+        //tipo string ou cadeia de caracteres:
+        var s1 = "curso em video guabara"
+        var s2 = "de javascript"
+        var s3 = "youtube"
+        
     </script>
 </body>
 </html>
