Diferença entre placeholder e concatenação

--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -34,17 +34,21 @@
         var n2 = Number.parseFloat(prompt("digite outro numero: "))
         */
 
+
        /*desta forma o javascript autointerpreta se o numero é
         tipo inteiro ou tipo real*/
         var n1 = Number(prompt("Digite um numero: "))
         var n2 = Number(prompt("digite outro numero: "))
-        var soma = n1 + n2
-
-        window.alert("a soma dos dois valores é: " + soma) //concatenação
-
-        //o + serve para contatenação e também para adição
-
         
+        //o + serve para contatenação e também para adição
+        var soma = n1 + n2
+        
+        //concatenação
+        //window.alert("a soma dos dois valores é: " + soma)
+
+        //placeholder
+        window.alert(`A soma entre ${n1} e ${n2} é igual a ${soma}`)
+
     </script>
 </body>
 </html>
