somente adicionado um else para caso calculo esteja vazio

--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -71,6 +71,10 @@
             {
                 document.getElementById('resultado').innerHTML = eval(resultado);
             }
+            else 
+            {
+                document.getElementById('resultado').innerHTML = "Cálculo inválido"
+            }
         }
 
     </script>
